Fixed QPixmap::grabWidget() on widgets that have not yet been shown.

Fixed bug where QPixmap::grabWidget() would return a pixmap of a
different size that the widget if the widget had not yet been shown or
resized. Updated the qpixmap autotest.

Task-number: QTBUG-4149
Reviewed-by: Trond